// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test product import and rename 1`] = `
"/**
 * auto generated by dubbo dj
 * ~~~ mechine coding 💗 ~~~~
 */

import User from 'org/apache/dubbo/js/User'

import User1 from 'org/apache/dubbo/js/service/User'

export interface IProduct {
  /**
   * 商品
   */
  id: number

  /**
   * 价格
   */
  price: number

  /**
   * 颜色
   */
  color: string

  /**
   * 管理用户
   */
  user: User

  /**
   * xx
   */
  user2: User
  h: User1
}
"
`;

exports[`test product import and rename 2`] = `
"/**
 * auto generated by dubbo dj
 * ~~~ mechine coding 💗 ~~~~
 */

import User from 'org/apache/dubbo/js/User'

import User1 from 'org/apache/dubbo/js/service/User'

export default class Product {
  /**
   * 商品
   */
  id: number

  /**
   * 价格
   */
  price: number

  /**
   * 颜色
   */
  color: string

  /**
   * 管理用户
   */
  user: User

  /**
   * xx
   */
  user2: User
  h: User1

  constructor(props: IProduct) {
    this.id = props.id
    this.price = props.price
    this.color = props.color
    this.user = props.user
    this.user2 = props.user2
    this.h = props.h
  }

  __fields2Java() {
    java('org.apache.dubbo.js.Product', {
      id: java.Integer(this.id),
      price: java.Integer(this.price),
      color: java.String(this.color),
      user: this.user.__fields2Java(),
      user2: this.user2.__fields2Java(),
      h: this.h.__fields2Java(),
    })
  }
}
"
`;

exports[`test user inf and class 1`] = `
Model {
  "cls": "org.apache.dubbo.js.User",
  "clsName": "User",
  "deps": Deps {
    "map": Map {},
  },
  "fields": Array [
    Object {
      "comment": "
    /**
    * 用户id
    */
   ",
      "name": "id",
      "type": Object {
        "javaType": "java.Integer(this.id)",
        "tsType": "number",
      },
    },
    Object {
      "comment": "
    /**
    * 用户名
    */
   ",
      "name": "name",
      "type": Object {
        "javaType": "java.String(this.name)",
        "tsType": "string",
      },
    },
    Object {
      "comment": "",
      "name": "isMale",
      "type": Object {
        "javaType": "java.Boolean(this.isMale)",
        "tsType": "boolean",
      },
    },
  ],
}
`;

exports[`test user inf and class 2`] = `
"{
  \\"deps\\": {
    \\"map\\": {}
  },
  \\"cls\\": \\"org.apache.dubbo.js.User\\",
  \\"fields\\": [
    {
      \\"name\\": \\"id\\",
      \\"type\\": {
        \\"tsType\\": \\"number\\",
        \\"javaType\\": \\"java.Integer(this.id)\\"
      },
      \\"comment\\": \\"\\\\n    /**\\\\n    * 用户id\\\\n    */\\\\n   \\"
    },
    {
      \\"name\\": \\"name\\",
      \\"type\\": {
        \\"tsType\\": \\"string\\",
        \\"javaType\\": \\"java.String(this.name)\\"
      },
      \\"comment\\": \\"\\\\n    /**\\\\n    * 用户名\\\\n    */\\\\n   \\"
    },
    {
      \\"name\\": \\"isMale\\",
      \\"type\\": {
        \\"tsType\\": \\"boolean\\",
        \\"javaType\\": \\"java.Boolean(this.isMale)\\"
      },
      \\"comment\\": \\"\\"
    }
  ],
  \\"clsName\\": \\"User\\"
}"
`;

exports[`test user inf and class 3`] = `
"/**
 * auto generated by dubbo dj
 * ~~~ mechine coding 💗 ~~~~
 */

export interface IUser {
  /**
   * 用户id
   */
  id: number

  /**
   * 用户名
   */
  name: string
  isMale: boolean
}
"
`;

exports[`test user inf and class 4`] = `
"/**
 * auto generated by dubbo dj
 * ~~~ mechine coding 💗 ~~~~
 */

export default class User {
  /**
   * 用户id
   */
  id: number

  /**
   * 用户名
   */
  name: string
  isMale: boolean

  constructor(props: IUser) {
    this.id = props.id
    this.name = props.name
    this.isMale = props.isMale
  }

  __fields2Java() {
    java('org.apache.dubbo.js.User', {
      id: java.Integer(this.id),
      name: java.String(this.name),
      isMale: java.Boolean(this.isMale),
    })
  }
}
"
`;
